--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation "android.arch.persistence.room:runtime:$rootproject.roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootproject.roomVersion"
+    androidTestImplementation "android.arch.persistence.room:testing:$rootproject.roomVersion"
+
+
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'android.arch.lifecycle:viewmodel:1.1.1'
+    implementation 'android.arch.lifecycle:livedata:1.1.1'
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 }
